feat: reconfigured to have a switcher in the future

--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -1,7 +1,7 @@
 {
   "intro_page": {
     "introduction": "Hola! soy Salvador Rioboo.",
-    "content": "Full Stack Developer de la ciudad de Málaga, llevo en esta profesión muchos años en la que sigo aprendiendo y mejorando cada día"
+    "content": "Full Stack Developer de la ciudad de Málaga"
   },
   "about_page": {
     "title": "Acerca de Mí",
